--- a/pom.xml
+++ b/pom.xml
@@ -313,6 +313,13 @@
           </includes>
         </configuration>
       </plugin>
+
+      <!--  SonarCloud  -->
+      <plugin>
+        <groupId>org.sonarsource.scanner.maven</groupId>
+        <artifactId>sonar-maven-plugin</artifactId>
+        <version>5.0.0.4389</version>
+      </plugin>
     </plugins>
   </build>
 
