--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,11 @@
       <artifactId>jspecify</artifactId>
       <version>1.0.0</version>
     </dependency>
+	  <dependency>
+		  <groupId>com.github.loki4j</groupId>
+		  <artifactId>loki-logback-appender</artifactId>
+		  <version>2.0.0</version>
+	  </dependency>
   </dependencies>
 
   <dependencyManagement>
