--- a/pom.xml
+++ b/pom.xml
@@ -123,11 +123,11 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>com.phumlanidev</groupId>
-			<artifactId>common-events</artifactId>
-			<version>1.0.0</version>
-		</dependency>
+        <dependency>
+            <groupId>com.phumlanidev.commonevents</groupId>
+            <artifactId>common-events</artifactId>
+            <version>3.1.0</version>
+        </dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
