--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -46,6 +46,7 @@ jobs:
     needs: build
     permissions:
       packages: write      # Required for pushing to ghcr.io
+      actions: read
       contents: read
     uses: PhumlaniDev/reusable-workflows/.github/workflows/java-maven-docker.yml@main
     with:
